--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.9",
+    "@types/react-native-snap-carousel": "^3.8.5",
+    "deprecated-react-native-prop-types": "^4.0.0",
+    "patch-package": "^6.5.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-prompt-android": "^1.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
